# Telegram_Bot

./: .env  .env.dist  .gitignore  README.md  bot.py  bot_for_FSM.py  bot_init_example.private  bot_registry.py  bot_start.py  config.py  pyproject.toml  training_file.py
FSM/: first_fsm.py
data_base/: db_alchemy.py  dbcore.py
handlers/: handler.py  handler_fsm.py  handler_inline.py  handler_inline_bot.py  handler_main.py  handlers_com.py
ideal/: aiogram_bot.py
markup/: markup.py
models/: media.py
setting/: config.py  message_FSM.py  messages.py  setting_core.py
tg_bot/: config.py
tg_bot/filters/: admin.py
tg_bot/handlers/: admin.py  echo.py  user.py
tg_bot/middlewares/: db.py
tg_bot/services/: setting_commands.py
