[tool.poetry]
name = "telegram_bot"
version = "0.1.0"
description = ""
authors = ["Евгений <volga52@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.23.1"
SQLAlchemy = "^1.4.46"
emoji = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
